Fix spacing

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -9,10 +9,6 @@
     color: $text-main;
   }
 
-  > p:first-of-type {
-    margin-bottom: 2%;
-  }
-
   > p:nth-last-of-type(2) {
     margin-bottom: 16%;
   }
